@@ -9,7 +9,7 @@
 
 # Requirements:
 #
-# CHIBIOS_VERSION               Which version of ChibiOS is this (2, 3, 16, git) - default is 16
+# CHIBIOS_VERSION               Which version of ChibiOS is this (2, 3, 4, 5, 16, git) - default is 16
 #								Note the 'git' option is one we try to keep up to date with the ChibiOS master
 #									If you find the 'git' option requires update please let us know.
 #
@@ -18,6 +18,10 @@
 ifeq ($(CHIBIOS_VERSION),2)
   include $(GFXLIB)/tools/gmake_scripts/os_chibios_2.mk
 else ifeq ($(CHIBIOS_VERSION),3)
+  include $(GFXLIB)/tools/gmake_scripts/os_chibios_3.mk
+else ifeq ($(CHIBIOS_VERSION),4)
+  include $(GFXLIB)/tools/gmake_scripts/os_chibios_3.mk
+else ifeq ($(CHIBIOS_VERSION),5)
   include $(GFXLIB)/tools/gmake_scripts/os_chibios_3.mk
 else ifeq ($(CHIBIOS_VERSION),16)
   include $(GFXLIB)/tools/gmake_scripts/os_chibios_3.mk
