@@ -25,6 +25,7 @@ FIX:		Fixed UC1610 driver private area initialisation
 FIX:		Fixed ST7735 driver and added kapacuk changes
 FEATURE:	Added keyboard support to radio buttons (by Steffan)
 FEATURE:	Added internal use only GFX_COMPILESTAGE (used to control compilation)
+FEATURE:	Added support for ChibiOS Kernel V5
 
 
 *** Release 2.8 ***
